Assignment_5/assgn_5_21CS30059_21CS30038.output
Nonterminals useless in grammar

    init-declarator-listopt


Terminals unused in grammar

    TYPE_SPECIFIER_TOKEN
    ENUMERATION_CONST
    KEYWORD
    PUNCTUATOR
    ERROR


Rules useless in grammar

  213 init-declarator-listopt: init-declarator-list
  214                        | ε


Grammar

    0 $accept: translation-unit $end

    1 primary-expression: IDENTIFIER
    2                   | INTEGER
    3                   | FLOATING_CONSTANT
    4                   | CHARACTER_CONSTANT
    5                   | STRING_LITERAL
    6                   | LEFT_PARENTHESIS expression RIGHT_PARENTHESIS

    7 postfix-expression: primary-expression
    8                   | postfix-expression LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET
    9                   | postfix-expression LEFT_PARENTHESIS argument-expression-listopt RIGHT_PARENTHESIS
   10                   | postfix-expression DOT IDENTIFIER
   11                   | postfix-expression ARROW IDENTIFIER
   12                   | postfix-expression INCREMENT
   13                   | postfix-expression DECREMENT
   14                   | LEFT_PARENTHESIS type-name RIGHT_PARENTHESIS LEFT_CURLY_BRACKET initializer-list RIGHT_CURLY_BRACKET
   15                   | LEFT_PARENTHESIS type-name RIGHT_PARENTHESIS LEFT_CURLY_BRACKET initializer-list COMMA RIGHT_CURLY_BRACKET

   16 argument-expression-list: assignment-expression
   17                         | argument-expression-list COMMA assignment-expression

   18 argument-expression-listopt: argument-expression-list
   19                            | ε

   20 unary-expression: postfix-expression
   21                 | INCREMENT unary-expression
   22                 | DECREMENT unary-expression
   23                 | unary-operator cast-expression
   24                 | SIZEOF unary-expression
   25                 | SIZEOF LEFT_PARENTHESIS type-name RIGHT_PARENTHESIS

   26 unary-operator: AND
   27               | STAR
   28               | PLUS
   29               | MINUS
   30               | TILDE
   31               | NOT

   32 cast-expression: unary-expression
   33                | LEFT_PARENTHESIS type-name RIGHT_PARENTHESIS cast-expression

   34 multiplicative-expression: cast-expression
   35                          | multiplicative-expression STAR cast-expression
   36                          | multiplicative-expression DIV cast-expression
   37                          | multiplicative-expression MOD cast-expression

   38 additive-expression: multiplicative-expression
   39                    | additive-expression PLUS multiplicative-expression
   40                    | additive-expression MINUS multiplicative-expression

   41 shift-expression: additive-expression
   42                 | shift-expression LEFT_SHIFT additive-expression
   43                 | shift-expression RIGHT_SHIFT additive-expression

   44 relational-expression: shift-expression
   45                      | relational-expression LESS_THAN shift-expression
   46                      | relational-expression GREATER_THAN shift-expression
   47                      | relational-expression LESS_THAN_EQUAL shift-expression
   48                      | relational-expression GREATER_THAN_EQUAL shift-expression

   49 equality-expression: relational-expression
   50                    | equality-expression EQUAL_TO relational-expression
   51                    | equality-expression NOT_EQUAL_TO relational-expression

   52 AND-expression: equality-expression
   53               | AND-expression AND equality-expression

   54 exclusive-OR-expression: AND-expression
   55                        | exclusive-OR-expression XOR AND-expression

   56 inclusive-OR-expression: exclusive-OR-expression
   57                        | inclusive-OR-expression OR exclusive-OR-expression

   58 logical-AND-expression: inclusive-OR-expression
   59                       | logical-AND-expression AND_AND M inclusive-OR-expression

   60 logical-OR-expression: logical-AND-expression
   61                      | logical-OR-expression OR_OR M logical-AND-expression

   62 conditional-expression: logical-OR-expression
   63                       | logical-OR-expression N QUESTION M expression N COLON M conditional-expression

   64 M: ε

   65 N: ε

   66 assignment-expression: conditional-expression
   67                      | unary-expression assignment-operator assignment-expression

   68 assignment-operator: EQUALS
   69                    | ASSIGNMENT_OPERATOR

   70 expression: assignment-expression
   71           | expression COMMA assignment-expression

   72 constant-expression: conditional-expression

   73 declaration: declaration-specifiers init-declarator-list SEMICOLON
   74            | declaration-specifiers SEMICOLON

   75 declaration-specifiers: storage-class-specifier declaration-specifiers
   76                       | storage-class-specifier
   77                       | type-specifier declaration-specifiers
   78                       | type-specifier
   79                       | type-qualifier declaration-specifiers
   80                       | type-qualifier
   81                       | function-specifier declaration-specifiers
   82                       | function-specifier

   83 type-qualifier: TYPE_QUALIFIER

   84 init-declarator-list: init-declarator
   85                     | init-declarator-list COMMA init-declarator

   86 init-declarator: declarator
   87                | declarator EQUALS initializer

   88 type-specifier: VOID
   89               | CHAR
   90               | SHORT
   91               | INT
   92               | LONG
   93               | FLOAT
   94               | DOUBLE
   95               | SIGNED
   96               | UNSIGNED
   97               | BOOL
   98               | COMPLEX
   99               | IMAGINARY
  100               | enum-specifier

  101 storage-class-specifier: STORAGE_CLASS_SPECIFIER
  102                        | STATIC_TOKEN

  103 specifier-qualifier-list: type-specifier specifier-qualifier-listopt
  104                         | TYPE_QUALIFIER specifier-qualifier-listopt

  105 specifier-qualifier-listopt: specifier-qualifier-list
  106                            | ε

  107 enum-specifier: ENUM identifieropt LEFT_CURLY_BRACKET enumerator-list RIGHT_CURLY_BRACKET
  108               | ENUM IDENTIFIER
  109               | ENUM identifieropt LEFT_CURLY_BRACKET enumerator-list COMMA RIGHT_CURLY_BRACKET

  110 identifieropt: IDENTIFIER
  111              | ε

  112 enumerator-list: enumerator
  113                | enumerator-list COMMA enumerator

  114 enumerator: IDENTIFIER
  115           | IDENTIFIER EQUALS constant-expression

  116 function-specifier: FUNCTION_SPECIFIER

  117 declarator: pointer direct-declarator
  118           | direct-declarator

  119 direct-declarator: IDENTIFIER
  120                  | LEFT_PARENTHESIS declarator RIGHT_PARENTHESIS
  121                  | direct-declarator LEFT_SQUARE_BRACKET type-qualifier-list RIGHT_SQUARE_BRACKET
  122                  | direct-declarator LEFT_SQUARE_BRACKET type-qualifier-list assignment-expression RIGHT_SQUARE_BRACKET
  123                  | direct-declarator LEFT_SQUARE_BRACKET assignment-expression RIGHT_SQUARE_BRACKET
  124                  | direct-declarator LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
  125                  | direct-declarator LEFT_SQUARE_BRACKET STATIC_TOKEN type-qualifier-list assignment-expression RIGHT_SQUARE_BRACKET
  126                  | direct-declarator LEFT_SQUARE_BRACKET STATIC_TOKEN assignment-expression RIGHT_SQUARE_BRACKET
  127                  | direct-declarator LEFT_SQUARE_BRACKET type-qualifier-list STATIC_TOKEN assignment-expression RIGHT_SQUARE_BRACKET
  128                  | direct-declarator LEFT_SQUARE_BRACKET type-qualifier-list STAR RIGHT_SQUARE_BRACKET
  129                  | direct-declarator LEFT_SQUARE_BRACKET STAR RIGHT_SQUARE_BRACKET
  130                  | direct-declarator LEFT_PARENTHESIS change-table parameter-type-list RIGHT_PARENTHESIS
  131                  | direct-declarator LEFT_PARENTHESIS identifier-list RIGHT_PARENTHESIS
  132                  | direct-declarator LEFT_PARENTHESIS change-table RIGHT_PARENTHESIS

  133 type-qualifier-listopt: type-qualifier-list
  134                       | ε

  135 pointer: STAR type-qualifier-listopt
  136        | STAR type-qualifier-listopt pointer

  137 type-qualifier-list: TYPE_QUALIFIER
  138                    | type-qualifier-list TYPE_QUALIFIER

  139 parameter-type-list: parameter-list
  140                    | parameter-list COMMA ELLIPSIS

  141 parameter-list: parameter-declaration
  142               | parameter-list COMMA parameter-declaration

  143 parameter-declaration: declaration-specifiers declarator
  144                      | declaration-specifiers

  145 identifier-list: IDENTIFIER
  146                | identifier-list COMMA IDENTIFIER

  147 type-name: specifier-qualifier-list

  148 initializer: assignment-expression
  149            | LEFT_CURLY_BRACKET initializer-list RIGHT_CURLY_BRACKET
  150            | LEFT_CURLY_BRACKET initializer-list COMMA RIGHT_CURLY_BRACKET

  151 initializer-list: designationopt initializer
  152                 | initializer-list COMMA designationopt initializer

  153 designationopt: designation
  154               | ε

  155 designation: designator-list EQUALS

  156 designator-list: designator
  157                | designator-list designator

  158 designator: LEFT_SQUARE_BRACKET constant-expression RIGHT_SQUARE_BRACKET
  159           | DOT IDENTIFIER

  160 statement: labeled-statement
  161          | compound-statement
  162          | expression-statement
  163          | selection-statement
  164          | iteration-statement
  165          | jump-statement

  166 loop-statement: labeled-statement
  167               | expression-statement
  168               | selection-statement
  169               | iteration-statement
  170               | jump-statement

  171 labeled-statement: IDENTIFIER COLON statement
  172                  | CASE constant-expression COLON statement
  173                  | DEFAULT COLON statement

  174 compound-statement: LEFT_CURLY_BRACKET A change-table block-item-listopt RIGHT_CURLY_BRACKET

  175 A: ε

  176 change-table: ε

  177 block-item-listopt: block-item-list
  178                   | ε

  179 block-item-list: block-item
  180                | block-item-list M block-item

  181 block-item: declaration
  182           | statement

  183 expression-statement: expression SEMICOLON
  184                     | SEMICOLON

  185 selection-statement: IF LEFT_PARENTHESIS expression N RIGHT_PARENTHESIS M statement N
  186                    | IF LEFT_PARENTHESIS expression N RIGHT_PARENTHESIS M statement N ELSE M statement
  187                    | SWITCH LEFT_PARENTHESIS expression RIGHT_PARENTHESIS statement

  188 iteration-statement: WHILE W LEFT_PARENTHESIS A change-table M expression RIGHT_PARENTHESIS M loop-statement
  189                    | WHILE W LEFT_PARENTHESIS A change-table M expression RIGHT_PARENTHESIS LEFT_CURLY_BRACKET M block-item-listopt RIGHT_CURLY_BRACKET
  190                    | DO D M loop-statement M WHILE LEFT_PARENTHESIS expression RIGHT_PARENTHESIS SEMICOLON
  191                    | DO D LEFT_CURLY_BRACKET M block-item-listopt RIGHT_CURLY_BRACKET M WHILE LEFT_PARENTHESIS expression RIGHT_PARENTHESIS SEMICOLON
  192                    | FOR F LEFT_PARENTHESIS A change-table declaration M expression-statement M expression N RIGHT_PARENTHESIS M loop-statement
  193                    | FOR F LEFT_PARENTHESIS A change-table expression-statement M expression-statement M expression N RIGHT_PARENTHESIS M loop-statement
  194                    | FOR F LEFT_PARENTHESIS A change-table declaration M expression-statement M expression N RIGHT_PARENTHESIS M LEFT_CURLY_BRACKET block-item-listopt RIGHT_CURLY_BRACKET
  195                    | FOR F LEFT_PARENTHESIS A change-table expression-statement M expression-statement M expression N RIGHT_PARENTHESIS M LEFT_CURLY_BRACKET block-item-listopt RIGHT_CURLY_BRACKET

  196 F: ε

  197 W: ε

  198 D: ε

  199 jump-statement: GOTO IDENTIFIER SEMICOLON
  200               | CONTINUE SEMICOLON
  201               | BREAK SEMICOLON
  202               | RETURN expression SEMICOLON
  203               | RETURN SEMICOLON

  204 translation-unit: external-declaration
  205                 | translation-unit external-declaration

  206 external-declaration: function-definition
  207                     | declaration

  208 function-definition: declaration-specifiers declarator declaration-listopt change-table LEFT_CURLY_BRACKET block-item-listopt RIGHT_CURLY_BRACKET

  209 declaration-listopt: declaration-list
  210                    | ε

  211 declaration-list: declaration
  212                 | declaration-list declaration


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <pointer> (258) 1 10 11 108 110 114 115 119 145 146 159 171 199
    INTEGER <intval> (259) 2
    FLOATING_CONSTANT <floatval> (260) 3
    CHARACTER_CONSTANT <charval> (261) 4
    STRING_LITERAL <charval> (262) 5
    ENUM (263) 107 108 109
    TYPE_SPECIFIER_TOKEN (264)
    STORAGE_CLASS_SPECIFIER (265) 101
    STATIC_TOKEN (266) 102 125 126 127
    FUNCTION_SPECIFIER (267) 116
    CASE (268) 172
    DEFAULT (269) 173
    SIZEOF (270) 24 25
    ELSE (271) 186
    SWITCH (272) 187
    WHILE (273) 188 189 190 191
    DO (274) 190 191
    FOR (275) 192 193 194 195
    GOTO (276) 199
    CONTINUE (277) 200
    BREAK (278) 201
    RETURN (279) 202 203
    TYPE_QUALIFIER (280) 83 104 137 138
    FLOAT (281) 93
    ASSIGNMENT_OPERATOR (282) 69
    ENUMERATION_CONST (283)
    KEYWORD (284)
    PUNCTUATOR (285)
    ERROR (286)
    VOID (287) 88
    CHAR (288) 89
    SHORT (289) 90
    INT (290) 91
    LONG (291) 92
    DOUBLE (292) 94
    SIGNED (293) 95
    UNSIGNED (294) 96
    BOOL (295) 97
    COMPLEX (296) 98
    IMAGINARY (297) 99
    IF (298) 185 186
    EQUALS (299) 68 87 115 155
    INCREMENT (300) 12 21
    DECREMENT (301) 13 22
    AND (302) 26 53
    STAR (303) 27 35 128 129 135 136
    PLUS (304) 28 39
    MINUS (305) 29 40
    TILDE (306) 30
    NOT (307) 31
    DIV (308) 36
    MOD (309) 37
    LEFT_SHIFT (310) 42
    RIGHT_SHIFT (311) 43
    LESS_THAN (312) 45
    GREATER_THAN (313) 46
    LESS_THAN_EQUAL (314) 47
    GREATER_THAN_EQUAL (315) 48
    EQUAL_TO (316) 50
    NOT_EQUAL_TO (317) 51
    XOR (318) 55
    OR (319) 57
    AND_AND (320) 59
    OR_OR (321) 61
    QUESTION (322) 63
    COLON (323) 63 171 172 173
    SEMICOLON (324) 73 74 183 184 190 191 199 200 201 202 203
    COMMA (325) 15 17 71 85 109 113 140 142 146 150 152
    LEFT_SQUARE_BRACKET (326) 8 121 122 123 124 125 126 127 128 129 158
    RIGHT_SQUARE_BRACKET (327) 8 121 122 123 124 125 126 127 128 129 158
    LEFT_CURLY_BRACKET (328) 14 15 107 109 149 150 174 189 191 194 195 208
    RIGHT_CURLY_BRACKET (329) 14 15 107 109 149 150 174 189 191 194 195 208
    LEFT_PARENTHESIS (330) 6 9 14 15 25 33 120 130 131 132 185 186 187 188 189 190 191 192 193 194 195
    RIGHT_PARENTHESIS (331) 6 9 14 15 25 33 120 130 131 132 185 186 187 188 189 190 191 192 193 194 195
    DOT (332) 10 159
    ELLIPSIS (333) 140
    ARROW (334) 11
    LOWER_THAN_ELSE (335)


Nonterminals, with rules where they appear

    $accept (81)
        on left: 0
    primary-expression <exp> (82)
        on left: 1 2 3 4 5 6
        on right: 7
    postfix-expression <Array> (83)
        on left: 7 8 9 10 11 12 13 14 15
        on right: 8 9 10 11 12 13 20
    argument-expression-list <numParams> (84)
        on left: 16 17
        on right: 17 18
    argument-expression-listopt <numParams> (85)
        on left: 18 19
        on right: 9
    unary-expression <Array> (86)
        on left: 20 21 22 23 24 25
        on right: 21 22 24 32 67
    unary-operator <unaryOp> (87)
        on left: 26 27 28 29 30 31
        on right: 23
    cast-expression <Array> (88)
        on left: 32 33
        on right: 23 33 34 35 36 37
    multiplicative-expression <exp> (89)
        on left: 34 35 36 37
        on right: 35 36 37 38 39 40
    additive-expression <exp> (90)
        on left: 38 39 40
        on right: 39 40 41 42 43
    shift-expression <exp> (91)
        on left: 41 42 43
        on right: 42 43 44 45 46 47 48
    relational-expression <exp> (92)
        on left: 44 45 46 47 48
        on right: 45 46 47 48 49 50 51
    equality-expression <exp> (93)
        on left: 49 50 51
        on right: 50 51 52 53
    AND-expression <exp> (94)
        on left: 52 53
        on right: 53 54 55
    exclusive-OR-expression <exp> (95)
        on left: 54 55
        on right: 55 56 57
    inclusive-OR-expression <exp> (96)
        on left: 56 57
        on right: 57 58 59
    logical-AND-expression <exp> (97)
        on left: 58 59
        on right: 59 60 61
    logical-OR-expression <exp> (98)
        on left: 60 61
        on right: 61 62 63
    conditional-expression <exp> (99)
        on left: 62 63
        on right: 63 66 72
    M <instr> (100)
        on left: 64
        on right: 59 61 63 180 185 186 188 189 190 191 192 193 194 195
    N <stmt> (101)
        on left: 65
        on right: 63 185 186 192 193 194 195
    assignment-expression <exp> (102)
        on left: 66 67
        on right: 16 17 67 70 71 122 123 125 126 127 148
    assignment-operator (103)
        on left: 68 69
        on right: 67
    expression <exp> (104)
        on left: 70 71
        on right: 6 8 63 71 183 185 186 187 188 189 190 191 192 193 194 195 202
    constant-expression (105)
        on left: 72
        on right: 115 158 172
    declaration (106)
        on left: 73 74
        on right: 181 192 194 207 211 212
    declaration-specifiers (107)
        on left: 75 76 77 78 79 80 81 82
        on right: 73 74 75 77 79 81 143 144 208
    type-qualifier (108)
        on left: 83
        on right: 79 80
    init-declarator-list (109)
        on left: 84 85
        on right: 73 85
    init-declarator <pointer> (110)
        on left: 86 87
        on right: 84 85
    type-specifier (111)
        on left: 88 89 90 91 92 93 94 95 96 97 98 99 100
        on right: 77 78 103
    storage-class-specifier (112)
        on left: 101 102
        on right: 75 76
    specifier-qualifier-list (113)
        on left: 103 104
        on right: 105 147
    specifier-qualifier-listopt (114)
        on left: 105 106
        on right: 103 104
    enum-specifier (115)
        on left: 107 108 109
        on right: 100
    identifieropt (116)
        on left: 110 111
        on right: 107 109
    enumerator-list (117)
        on left: 112 113
        on right: 107 109 113
    enumerator (118)
        on left: 114 115
        on right: 112 113
    function-specifier (119)
        on left: 116
        on right: 81 82
    declarator <pointer> (120)
        on left: 117 118
        on right: 86 87 120 143 208
    direct-declarator <pointer> (121)
        on left: 119 120 121 122 123 124 125 126 127 128 129 130 131 132
        on right: 117 118 121 122 123 124 125 126 127 128 129 130 131 132
    type-qualifier-listopt (122)
        on left: 133 134
        on right: 135 136
    pointer <ptr> (123)
        on left: 135 136
        on right: 117 136
    type-qualifier-list (124)
        on left: 137 138
        on right: 121 122 125 127 128 133 138
    parameter-type-list (125)
        on left: 139 140
        on right: 130
    parameter-list (126)
        on left: 141 142
        on right: 139 140 142
    parameter-declaration (127)
        on left: 143 144
        on right: 141 142
    identifier-list (128)
        on left: 145 146
        on right: 131 146
    type-name (129)
        on left: 147
        on right: 14 15 25 33
    initializer <pointer> (130)
        on left: 148 149 150
        on right: 87 151 152
    initializer-list (131)
        on left: 151 152
        on right: 14 15 149 150 152
    designationopt (132)
        on left: 153 154
        on right: 151 152
    designation (133)
        on left: 155
        on right: 153
    designator-list (134)
        on left: 156 157
        on right: 155 157
    designator (135)
        on left: 158 159
        on right: 156 157
    statement <stmt> (136)
        on left: 160 161 162 163 164 165
        on right: 171 172 173 182 185 186 187
    loop-statement <stmt> (137)
        on left: 166 167 168 169 170
        on right: 188 190 192 193
    labeled-statement <stmt> (138)
        on left: 171 172 173
        on right: 160 166
    compound-statement <stmt> (139)
        on left: 174
        on right: 161
    A (140)
        on left: 175
        on right: 174 188 189 192 193 194 195
    change-table (141)
        on left: 176
        on right: 130 132 174 188 189 192 193 194 195 208
    block-item-listopt <stmt> (142)
        on left: 177 178
        on right: 174 189 191 194 195 208
    block-item-list <stmt> (143)
        on left: 179 180
        on right: 177 180
    block-item <stmt> (144)
        on left: 181 182
        on right: 179 180
    expression-statement <exp> (145)
        on left: 183 184
        on right: 162 167 192 193 194 195
    selection-statement <stmt> (146)
        on left: 185 186 187
        on right: 163 168
    iteration-statement <stmt> (147)
        on left: 188 189 190 191 192 193 194 195
        on right: 164 169
    F (148)
        on left: 196
        on right: 192 193 194 195
    W (149)
        on left: 197
        on right: 188 189
    D (150)
        on left: 198
        on right: 190 191
    jump-statement <stmt> (151)
        on left: 199 200 201 202 203
        on right: 165 170
    translation-unit (152)
        on left: 204 205
        on right: 0 205
    external-declaration (153)
        on left: 206 207
        on right: 204 205
    function-definition (154)
        on left: 208
        on right: 206
    declaration-listopt (155)
        on left: 209 210
        on right: 208
    declaration-list (156)
        on left: 211 212
        on right: 209 212


State 0

    0 $accept: • translation-unit $end

    ENUM                     shift, and go to state 1
    STORAGE_CLASS_SPECIFIER  shift, and go to state 2
    STATIC_TOKEN             shift, and go to state 3
    FUNCTION_SPECIFIER       shift, and go to state 4
    TYPE_QUALIFIER           shift, and go to state 5
    FLOAT                    shift, and go to state 6
    VOID                     shift, and go to state 7
    CHAR                     shift, and go to state 8
    SHORT                    shift, and go to state 9
    INT                      shift, and go to state 10
    LONG                     shift, and go to state 11
    DOUBLE                   shift, and go to state 12
    SIGNED                   shift, and go to state 13
    UNSIGNED                 shift, and go to state 14
    BOOL                     shift, and go to state 15
    COMPLEX                  shift, and go to state 16
    IMAGINARY                shift, and go to state 17

    declaration              go to state 18
    declaration-specifiers   go to state 19
    type-qualifier           go to state 20
    type-specifier           go to state 21
    storage-class-specifier  go to state 22
    enum-specifier           go to state 23
    function-specifier       go to state 24
    translation-unit         go to state 25
    external-declaration     go to state 26
    function-definition      go to state 27


State 1

  107 enum-specifier: ENUM • identifieropt LEFT_CURLY_BRACKET enumerator-list RIGHT_CURLY_BRACKET
  108               | ENUM • IDENTIFIER
  109               | ENUM • identifieropt LEFT_CURLY_BRACKET enumerator-list COMMA RIGHT_CURLY_BRACKET

    IDENTIFIER  shift, and go to state 28

    $default  reduce using rule 111 (identifieropt)

    identifieropt  go to state 29


State 2

  101 storage-class-specifier: STORAGE_CLASS_SPECIFIER •

    $default  reduce using rule 101 (storage-class-specifier)


State 3

  102 storage-class-specifier: STATIC_TOKEN •

    $default  reduce using rule 102 (storage-class-specifier)


State 4

  116 function-specifier: FUNCTION_SPECIFIER •

    $default  reduce using rule 116 (function-specifier)


State 5

   83 type-qualifier: TYPE_QUALIFIER •

    $default  reduce using rule 83 (type-qualifier)


State 6

   93 type-specifier: FLOAT •

    $default  reduce using rule 93 (type-specifier)


State 7

   88 type-specifier: VOID •

    $default  reduce using rule 88 (type-specifier)


State 8

   89 type-specifier: CHAR •

    $default  reduce using rule 89 (type-specifier)


State 9

   90 type-specifier: SHORT •

    $default  reduce using rule 90 (type-specifier)


State 10

   91 type-specifier: INT •

    $default  reduce using rule 91 (type-specifier)


State 11

   92 type-specifier: LONG •

    $default  reduce using rule 92 (type-specifier)


State 12

   94 type-specifier: DOUBLE •

    $default  reduce using rule 94 (type-specifier)


State 13

   95 type-specifier: SIGNED •

    $default  reduce using rule 95 (type-specifier)


State 14

   96 type-specifier: UNSIGNED •

    $default  reduce using rule 96 (type-specifier)


State 15

   97 type-specifier: BOOL •

    $default  reduce using rule 97 (type-specifier)


State 16

   98 type-specifier: COMPLEX •

    $default  reduce using rule 98 (type-specifier)


State 17

   99 type-specifier: IMAGINARY •

    $default  reduce using rule 99 (type-specifier)


State 18

  207 external-declaration: declaration •

    $default  reduce using rule 207 (external-declaration)


State 19

   73 declaration: declaration-specifiers • init-declarator-list SEMICOLON
   74            | declaration-specifiers • SEMICOLON
  208 function-definition: declaration-specifiers • declarator declaration-listopt change-table LEFT_CURLY_BRACKET block-item-listopt RIGHT_CURLY_BRACKET

    IDENTIFIER        shift, and go to state 30
    STAR              shift, and go to state 31
    SEMICOLON         shift, and go to state 32
    LEFT_PARENTHESIS  shift, and go to state 33

    init-declarator-list  go to state 34
    init-declarator       go to state 35
    declarator            go to state 36
    direct-declarator     go to state 37
    pointer               go to state 38


State 20

   79 declaration-specifiers: type-qualifier • declaration-specifiers
   80                       | type-qualifier •

    ENUM                     shift, and go to state 1
    STORAGE_CLASS_SPECIFIER  shift, and go to state 2
    STATIC_TOKEN             shift, and go to state 3
    FUNCTION_SPECIFIER       shift, and go to state 4
    TYPE_QUALIFIER           shift, and go to state 5
    FLOAT                    shift, and go to state 6
    VOID                     shift, and go to state 7
    CHAR                     shift, and go to state 8
    SHORT                    shift, and go to state 9
    INT                      shift, and go to state 10
    LONG                     shift, and go to state 11
    DOUBLE                   shift, and go to state 12
    SIGNED                   shift, and go to state 13
    UNSIGNED                 shift, and go to state 14
    BOOL                     shift, and go to state 15
    COMPLEX                  shift, and go to state 16
    IMAGINARY                shift, and go to state 17

    $default  reduce using rule 80 (declaration-specifiers)

    declaration-specifiers   go to state 39
    type-qualifier           go to state 20
    type-specifier           go to state 21
    storage-class-specifier  go to state 22
    enum-specifier           go to state 23
    function-specifier       go to state 24


State 21

   77 declaration-specifiers: type-specifier • declaration-specifiers
   78                       | type-specifier •

    ENUM                     shift, and go to state 1
    STORAGE_CLASS_SPECIFIER  shift, and go to state 2
    STATIC_TOKEN             shift, and go to state 3
    FUNCTION_SPECIFIER       shift, and go to state 4
    TYPE_QUALIFIER           shift, and go to state 5
    FLOAT                    shift, and go to state 6
    VOID                     shift, and go to state 7
    CHAR                     shift, and go to state 8
    SHORT                    shift, and go to state 9
    INT                      shift, and go to state 10
    LONG                     shift, and go to state 11
    DOUBLE                   shift, and go to state 12
    SIGNED                   shift, and go to state 13
    UNSIGNED                 shift, and go to state 14
    BOOL                     shift, and go to state 15
    COMPLEX                  shift, and go to state 16
    IMAGINARY                shift, and go to state 17

    $default  reduce using rule 78 (declaration-specifiers)

    declaration-specifiers   go to state 40
    type-qualifier           go to state 20
    type-specifier           go to state 21
    storage-class-specifier  go to state 22
    enum-specifier           go to state 23
    function-specifier       go to state 24


State 22

   75 declaration-specifiers: storage-class-specifier • declaration-specifiers
   76                       | storage-class-specifier •

    ENUM                     shift, and go to state 1
    STORAGE_CLASS_SPECIFIER  shift, and go to state 2
    STATIC_TOKEN             shift, and go to state 3
    FUNCTION_SPECIFIER       shift, and go to state 4
    TYPE_QUALIFIER           shift, and go to state 5
    FLOAT                    shift, and go to state 6
    VOID                     shift, and go to state 7
    CHAR                     shift, and go to state 8
    SHORT                    shift, and go to state 9
    INT                      shift, and go to state 10
    LONG                     shift, and go to state 11
    DOUBLE                   shift, and go to state 12
    SIGNED                   shift, and go to state 13
    UNSIGNED                 shift, and go to state 14
    BOOL                     shift, and go to state 15
    COMPLEX                  shift, and go to state 16
    IMAGINARY                shift, and go to state 17

    $default  reduce using rule 76 (declaration-specifiers)

    declaration-specifiers   go to state 41
    type-qualifier           go to state 20
    type-specifier           go to state 21
    storage-class-specifier  go to state 22
    enum-specifier           go to state 23
    function-specifier       go to state 24


State 23

  100 type-specifier: enum-specifier •

    $default  reduce using rule 100 (type-specifier)


State 24

   81 declaration-specifiers: function-specifier • declaration-specifiers
   82                       | function-specifier •

    ENUM                     shift, and go to state 1
    STORAGE_CLASS_SPECIFIER  shift, and go to state 2
    STATIC_TOKEN             shift, and go to state 3
    FUNCTION_SPECIFIER       shift, and go to state 4
    TYPE_QUALIFIER           shift, and go to state 5
    FLOAT                    shift, and go to state 6
    VOID                     shift, and go to state 7
    CHAR                     shift, and go to state 8
    SHORT                    shift, and go to state 9
    INT                      shift, and go to state 10
    LONG                     shift, and go to state 11
    DOUBLE                   shift, and go to state 12
    SIGNED                   shift, and go to state 13
    UNSIGNED                 shift, and go to state 14
    BOOL                     shift, and go to state 15
    COMPLEX                  shift, and go to state 16
    IMAGINARY                shift, and go to state 17

    $default  reduce using rule 82 (declaration-specifiers)

    declaration-specifiers   go to state 42
    type-qualifier           go to state 20
    type-specifier           go to state 21
    storage-class-specifier  go to state 22
    enum-specifier           go to state 23
    function-specifier       go to state 24


State 25

    0 $accept: translation-unit • $end
  205 translation-unit: translation-unit • external-declaration

    $end                     shift, and go to state 43
    ENUM                     shift, and go to state 1
    STORAGE_CLASS_SPECIFIER  shift, and go to state 2
    STATIC_TOKEN             shift, and go to state 3
    FUNCTION_SPECIFIER       shift, and go to state 4
    TYPE_QUALIFIER           shift, and go to state 5
    FLOAT                    shift, and go to state 6
    VOID                     shift, and go to state 7
    CHAR                     shift, and go to state 8
    SHORT                    shift, and go to state 9
    INT                      shift, and go to state 10
    LONG                     shift, and go to state 11
    DOUBLE                   shift, and go to state 12
    SIGNED                   shift, and go to state 13
    UNSIGNED                 shift, and go to state 14
    BOOL                     shift, and go to state 15
    COMPLEX                  shift, and go to state 16
    IMAGINARY                shift, and go to state 17

    declaration              go to state 18
    declaration-specifiers   go to state 19
    type-qualifier           go to state 20
    type-specifier           go to state 21
    storage-class-specifier  go to state 22
    enum-specifier           go to state 23
    function-specifier       go to state 24
    external-declaration     go to state 44
    function-definition      go to state 27


State 26

  204 translation-unit: external-declaration •

    $default  reduce using rule 204 (translation-unit)


State 27

  206 external-declaration: function-definition •

    $default  reduce using rule 206 (external-declaration)


State 28

  108 enum-specifier: ENUM IDENTIFIER •
  110 identifieropt: IDENTIFIER •

    LEFT_CURLY_BRACKET  reduce using rule 110 (identifieropt)
    $default            reduce using rule 108 (enum-specifier)


State 29

  107 enum-specifier: ENUM identifieropt • LEFT_CURLY_BRACKET enumerator-list RIGHT_CURLY_BRACKET
  109               | ENUM identifieropt • LEFT_CURLY_BRACKET enumerator-list COMMA RIGHT_CURLY_BRACKET

    LEFT_CURLY_BRACKET  shift, and go to state 45


State 30

  119 direct-declarator: IDENTIFIER •

    $default  reduce using rule 119 (direct-declarator)


State 31

  135 pointer: STAR • type-qualifier-listopt
  136        | STAR • type-qualifier-listopt pointer

    TYPE_QUALIFIER  shift, and go to state 46

    $default  reduce using rule 134 (type-qualifier-listopt)

    type-qualifier-listopt  go to state 47
    type-qualifier-list     go to state 48


State 32

   74 declaration: declaration-specifiers SEMICOLON •

    $default  reduce using rule 74 (declaration)


State 33

  120 direct-declarator: LEFT_PARENTHESIS • declarator RIGHT_PARENTHESIS

    IDENTIFIER        shift, and go to state 30
    STAR              shift, and go to state 31
    LEFT_PARENTHESIS  shift, and go to state 33

    declarator         go to state 49
    direct-declarator  go to state 37
    pointer            go to state 38


State 34

   73 declaration: declaration-specifiers init-declarator-list • SEMICOLON
   85 init-declarator-list: init-declarator-list • COMMA init-declarator

    SEMICOLON  shift, and go to state 50
    COMMA      shift, and go to state 51


State 35

   84 init-declarator-list: init-declarator •

    $default  reduce using rule 84 (init-declarator-list)


State 36

   86 init-declarator: declarator •
   87                | declarator • EQUALS initializer
  208 function-definition: declaration-specifiers declarator • declaration-listopt change-table LEFT_CURLY_BRACKET block-item-listopt RIGHT_CURLY_BRACKET
